feat: elytra+armor CIT support