@@ -2,6 +2,7 @@ package com.slize.datarium.client.cit;
 
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.inventory.EntityEquipmentSlot;
+import net.minecraft.item.ItemArmor;
 import net.minecraft.item.ItemStack;
 import net.minecraft.util.ResourceLocation;
 
@@ -18,26 +19,46 @@ public class CITArmorHandler {
         List<CITEntry> matches = CITManager.getMatchesOfType(stack, CITEntry.CITType.ARMOR);
         if (matches.isEmpty()) return null;
 
-        CITEntry entry = matches.getFirst();
-        String layerName = (slot == EntityEquipmentSlot.LEGS) ? "armor_layer_2" : "armor_layer_1";
-        if (type != null && !type.isEmpty()) layerName = layerName + "_" + type;
+        CITEntry entry = matches.get(0);
 
-        // Check sub-texture with layer name
+        // Determine which layer we need
+        boolean isLayer2 = (slot == EntityEquipmentSlot.LEGS);
+        String layerSuffix = isLayer2 ? "_layer_2" : "_layer_1";
+        // If overlay type (e.g. "overlay"), append it
+        String typeStr = (type != null && !type.isEmpty()) ? "_" + type : "";
+
         Map<String, ResourceLocation> subTextures = entry.getSubTextures();
         if (!subTextures.isEmpty()) {
-            // Try "layer_1" / "layer_2" keys matching vanilla armor texture filenames
+            // 1. Try to find sub-texture key that ends with layerSuffix (+ optional type)
+            //    e.g. "diamond_layer_1", "netherite_layer_1", "layer_1"
+            String fullSuffix = layerSuffix + typeStr;
             for (Map.Entry<String, ResourceLocation> e : subTextures.entrySet()) {
-                if (layerName.contains(e.getKey()) || e.getKey().contains(layerName)) {
+                if (e.getKey().endsWith(fullSuffix)) {
                     return e.getValue();
                 }
             }
-            // Fall back to first sub-texture for this layer
-            String key = (slot == EntityEquipmentSlot.LEGS) ? "2" : "1";
-            if (subTextures.containsKey(key)) return subTextures.get(key);
+            // 2. Try without type suffix
+            if (!typeStr.isEmpty()) {
+                for (Map.Entry<String, ResourceLocation> e : subTextures.entrySet()) {
+                    if (e.getKey().endsWith(layerSuffix)) {
+                        return e.getValue();
+                    }
+                }
+            }
+            // 3. Try numeric keys "1" / "2"
+            String numKey = isLayer2 ? "2" : "1";
+            if (subTextures.containsKey(numKey)) return subTextures.get(numKey);
+
+            // 4. Fallback: first sub-texture
+            return subTextures.values().iterator().next();
         }
 
-        // Fallback: top-level texture
-        return entry.getTexture();
+        // No sub-textures — use top-level texture
+        ResourceLocation topTex = entry.getTexture();
+        if (topTex != null) return topTex;
+
+        // Build vanilla-style path from top-level texture name if possible
+        return null;
     }
 
     @Nullable
@@ -45,7 +66,7 @@ public class CITArmorHandler {
         if (stack.isEmpty()) return null;
         List<CITEntry> matches = CITManager.getMatchesOfType(stack, CITEntry.CITType.ELYTRA);
         if (matches.isEmpty()) return null;
-        CITEntry entry = matches.getFirst();
+        CITEntry entry = matches.get(0);
         Map<String, ResourceLocation> sub = entry.getSubTextures();
         if (!sub.isEmpty()) return sub.values().iterator().next();
         return entry.getTexture();
